# ddbj-search-api

./: .dockerignore  .gitignore  .redocly.yaml  Dockerfile  Dockerfile-dev  README.md  compose.dev.yml  compose.override.podman.yml  compose.yml  env.dev  env.production  env.staging  env.template  new-api-doc.json  openapi_spec.json  pyproject.toml
.github/workflows/: build-doc.yaml  lint.yml  pytest.yml  release.yml
ddbj_search_api/: config.py  cursor.py  es_client.py  main.py  routers.py  schemas.py  utils.py
ddbj_search_api/dblink/: client.py
ddbj_search_api/es/: __init__.py  client.py  query.py
ddbj_search_api/routers/: __init__.py  _helpers.py  _query_validation.py  bulk.py  count.py  db_portal.py  dblink.py  entries.py  entry_detail.py  facets.py  service_info.py  umbrella_tree.py
ddbj_search_api/schemas/: __init__.py  bulk.py  common.py  count.py  db_portal.py  dblink.py  dbxrefs.py  entries.py  facets.py  queries.py  service_info.py  umbrella_tree.py
ddbj_search_api/search/: accession.py  phrase.py
ddbj_search_api/search/dsl/: __init__.py  accession_exact_match.py  allowlist.py  ast.py  compiler_es.py  compiler_solr.py  errors.py  grammar.lark  inspect.py  lex_patterns.py  organism_rewrite.py  parser.py  per_arm.py  serde.py  serializer.py  transform.py  validator.py
ddbj_search_api/solr/: __init__.py  client.py  mappers.py  query.py
doc/: .gitignore  .prettierrc.js  index.html  main.tsp  package.json  pnpm-lock.yaml  readme.md  tspconfig.yaml  vite.config.js
doc/public/: index.html
doc/scripts/: bundle.js  clean.js
doc/src/: main.tsp
doc/src/common/: components.tsp  constants.tsp  models.tsp
doc/src/dbsets/: BioProject.tsp  BioSample.tsp  JgaDac.tsp  JgaDataset.tsp  JgaPolicy.tsp  JgaStudy.tsp  SraExperiment.tsp  SraRun.tsp  SraSample.tsp  SraStudy.tsp  SraSubmission.tsp
docs/: api-spec.md  db-portal-api-spec.md  deployment.md  development.md  openapi.json  overview.md
docs/api-spec/: api-spec.md  openapi.yaml
tests/: _factories.py  _required_list_fields.py  integration-note.md  integration-scenarios.md  testing.md
tests/integration/: conftest.py  test_bulk.py  test_common.py  test_core.py  test_db_portal.py  test_db_portal_es.py  test_dblink.py  test_detail.py  test_dsl.py  test_entries.py  test_entry_detail.py  test_facets.py  test_search.py  test_service_info.py  test_status.py  test_umbrella_tree.py
tests/py_tests/: conftest.py  test_config.py  test_main.py  test_utils.py
tests/py_tests/routers/: test_trim_properties.py
tests/py_tests/schemas/: test_common.py
tests/unit/: conftest.py  strategies.py  test_config.py  test_cursor.py  test_main.py  test_utils.py
tests/unit/dblink/: conftest.py  test_client.py
tests/unit/es/: test_client.py  test_query.py
tests/unit/routers/: test_bulk.py  test_db_portal.py  test_db_portal_dedup.py  test_db_portal_facets.py  test_db_portal_parse.py  test_db_portal_search_by_ast.py  test_db_portal_serialize.py  test_dblink.py  test_entries.py  test_entry_detail.py  test_facets.py  test_service_info.py  test_umbrella_tree.py
tests/unit/schemas/: test_bulk.py  test_common.py  test_converter_contract.py  test_db_portal.py  test_db_portal_hits.py  test_dblink.py  test_dbxrefs.py  test_entries.py  test_facets.py  test_queries.py  test_service_info.py  test_umbrella_tree.py
tests/unit/search/: test_accession.py  test_phrase.py
tests/unit/search/dsl/: test_accession_exact_match.py  test_allowlist.py  test_compiler_es.py  test_compiler_solr.py  test_errors.py  test_grammar.py  test_inspect.py  test_organism_rewrite.py  test_per_arm.py  test_prefix_match.py  test_serde.py  test_serializer.py  test_transform.py  test_validator.py
tests/unit/solr/: test_client.py  test_mappers.py  test_query.py
